# KonTiKi

./: .gitignore  LICENSE  README.md
KonTiKi/: .swp  CMakeLists.txt  CMakeLists.txt.bak.140831  CMakeLists副本.txt
KonTiKi/Include/: .GameEngine.h.swp  Camera.h  Component.h  GameEngine.h  GameObject.h  GraphicsSystem.h  InputSystem.h  Material.h  Mesh.h  MeshFilter.h  MeshRenderer.h  Object.h  RenderingSystem.h  Runnable.h  System.h  Transform.h  Utils.h
KonTiKi/Include/Log/: Log.h
KonTiKi/Include/Math/: .Vector.h.swp  ConstantDefine.h  MathUtils.h  Matrix.h  Quaternion.h  Vector.h  Vector.h.bak
KonTiKi/Include/Renderer/: IVertexDataBuffer.h  Material.h  Mesh.h  MeshFilter.h  MeshRenderer.h  Pipeline.h  RenderCmd.h  RenderContext.h  Renderer.h  Shader.h
KonTiKi/Include/Renderer/GLES2/: Unify3DDeviceGLES2.h  VertexDataBufferGLES2.h
KonTiKi/Source/Core/: .GraphicsSystem.cpp.swp  CMakeLists.txt.bak.txt  Component.cpp  GameEngine.cpp  GameObject.cpp  GraphicsSystem.cpp  Object.cpp  RenderingSystem.cpp  System.cpp  Transform.cpp
KonTiKi/Source/Graphics/: Camera.cpp
KonTiKi/Source/Math/: Matrix.cpp  Quaternion.cpp  Vector.cpp
KonTiKi/Source/Renderer/: Material.cpp  Mesh.cpp
KonTiKi/Source/Renderer/GLES2/: Unify3DDeviceGLES2.cpp  VertexDataBufferGLES2.cpp
KonTiKi/Source/Test/: TestInConsole.cpp
KonTiKi/Xcode/: CMakeCache.txt  cmake_install.cmake
KonTiKi/Xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
KonTiKi/Xcode/KonTiKi.build/Debug/ALL_BUILD.build/: Script-E6238B85A4C54695A877C31A.sh
KonTiKi/Xcode/KonTiKi.build/Debug/ZERO_CHECK.build/: Script-5660F45624C043E0BC12BE2D.sh
KonTiKi/Xcode/KonTiKi.build/Debug/kontiki.build/: kontiki.dep
KonTiKi/Xcode/KonTiKi.build/Debug/kontiki.build/Objects-normal/x86_64/: GameObject.d  Object.d  kontiki.LinkFileList
KonTiKi/Xcode/KonTiKi.xcodeproj/: project.pbxproj
KonTiKi/Xcode/KonTiKi.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
KonTiKi/Xcode/KonTiKi.xcodeproj/project.xcworkspace/xcuserdata/Milc.xcuserdatad/: UserInterfaceState.xcuserstate
KonTiKi/Xcode/KonTiKi.xcodeproj/xcuserdata/Milc.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  kontiki.xcscheme  xcschememanagement.plist
KonTiKi/开发日志/: 20140901
